--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ form{
     border-radius: 4px;
 }
 
-.employeesList{
+#employeesList{
     margin-top: 3rem;
     margin-left: 3rem;
 }
@@ -35,4 +35,12 @@ table {
   
   tr:nth-child(even) {
     background-color: #dddddd;
+  }
+
+  #deleteBtn{
+    background-color: #1a73e8;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 1rem;
   }
