--- a/style.css
+++ b/style.css
@@ -44,3 +44,28 @@ table {
     cursor: pointer;
     font-size: 1rem;
   }
+
+  .searchBar{
+    display: inline-flex;
+  }
+
+  #searchEmployees{
+    width: 14%;
+    font-size: 16px;
+    padding: 0.7rem 0.5rem 0.2rem 1rem;
+    border: 1px solid #ddd;
+    margin-bottom: 1rem;
+    margin-left: 73rem;
+    border-right: none;
+    border-radius: 0.5rem 0 0 0.5rem;
+  }
+
+  .searchIcon{
+    padding: 8px 12px;
+    font-size: 14px;
+    color: #555;
+    border: 1px solid #ccc;
+    margin-bottom: 1rem;
+    border-left: none;
+    border-radius: 0 0.5rem 0.5rem 0;
+  }
