Changed search bar input id.

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ table {
     margin-bottom: 0.5rem;
   }
 
-  #searchEmployees{
+  #inputSearchEmployees{
     width: 32%;
     font-size: 16px;
     padding: 0.7rem 0.5rem 0.2rem 1rem;
